<resources>
    <string name="first_question_text">The Christmas tree tradition comes from this European Country..</string>
    <string name="correct_text">You\'re right.</string>
    <string name="wrong_text">Unfortunately, you\'re right.</string>
    <string name="first_question_toast">This Christmas tradition is believed to have developed in early modern Germany in the 16th or possibly 15th century.</string>
    <string name="second_question_text">Is it true that the traditional American Christmas song \'Jingle Bells\' was actually written for Thanksgiving?</string>
    <string name="second_question_toast">In fact, Jingle Bells was written by James Lord Pierpont for American Thanksgiving.</string>
    <string name="third_question_text_first">The poinsettia which is commonly referred to as the traditional</string>
    <string name="third_question_text_second">flower, originally came from</string>
    <string name="fourth_question_text">Most of the world\'s plastic Christmas decorations are made in this country, but only about one percent of it\'s population actually celebrate Christmas</string>
    <string name="fourth_question_toast">The answer is China because only a few Chinese people are Christians.</string>
    <string name="fifth_question_text_first">In Brazil, a common Christmas-day food is</string>
    <string name="fifth_question_text_second">, which is similar to French toast.</string>
    <string name="fifth_question_toast">Rabanada is thick slices of day-old bread, dipped in a mixture of mild and beaten eggs, fried in butter and deliciously covered in syrup.</string>
    <string name="sixth_question_text_first">In England, children believe that Father </string>
    <string name="sixth_question_text_second">or (Santa Claus) leaves presents in </string>
    <string name="sixth_question_text_third">. These are normally hung up on the mantle or by the children\'s beds on Christmas </string>
    <string name="sixth_question_toast">Children hang up Christmas stockings on the mantle or by their beds so that Father Christmas can put presents there.</string>
    <string name="app_name">Christmas Quizzes</string>
    <string name="first_title">Christmas Trees</string>
    <string name="second_title">Jingle Bells</string>
    <string name="third_title">Flowery</string>
    <string name="fourth_title">Decorations</string>
    <string name="fifth_title">Toasty</string>
    <string name="sixth_title">Santa</string>
    <string name="first_option_1">Italy</string>
    <string name="first_option_2">Poland</string>
    <string name="first_option_3">Germany</string>
    <string name="first_option_4">Finland</string>
    <string name="second_option_1">True</string>
    <string name="second_option_2">False</string>
    <string name="fourth_option_1">India</string>
    <string name="fourth_option_2">China</string>
    <string name="fourth_option_3">Japan</string>
    <string name="third_option_4">Santa</string>
    <string name="third_option_5">Santa</string>
    <string name="third_option_6">Santa</string>
    <string name="third_option_7">Santa</string>
    <string name="third_option_8">Santa</string>
    <string name="third_option_9">Santa</string>
    <string name="third_option_10">Santa</string>
    <string name="third_option_11">Santa</string>
    <string name="submit">Submit</string>
    <string name="seventh_question">These are all things related to Christmas except&#8230;</string>
    <string name="seventh_option_1">Eggnog</string>
    <string name="seventh_option_2">Elves</string>
    <string name="seventh_option_3">Lent</string>
    <string name="seventh_option_4">Mistletoe</string>
</resources>
